media query added to avoid overlap on title

--- a/client/src/components/Landing/Main.module.css
+++ b/client/src/components/Landing/Main.module.css
@@ -81,3 +81,9 @@ p {
     transform: scale3d(1, 1, 1);
   }
 }
+
+@media (max-width: 992px) {
+  .container .text h1 {
+    font-size: 5rem;
+  }
+}
